@@ -1,5 +1,5 @@
-#Tue Jan 22 21:44:12 EST 2008
-admin=admin,admin
+#Tue Aug 26 22:51:38 EST 2008
+admin=CRYPT\:TuIqhLvdZDT9o,admin
 jetty=MD5\:164c88b302622e17050af52c89945d44,user
 user=CRYPT\:Sug24raQkxtYQ,user
-test=CRYPT\:We5nvzNRX7V1U,user
+test=CRYPT\:Tudvnoak95TGE,user
